# ai_rfq_engine

./: .gitignore  NESTED_RESOLVER_DEVELOPMENT_PLAN.md  README.md  ai_rfq_postman_collection.json  pyproject.toml  setup.py
ai_rfq_engine/: __init__.py  handlers.py  main.py  models.py  mutations.py  queries.py  schema.py  types.py
ai_rfq_engine/handlers/: config.py
ai_rfq_engine/models/: batch_loaders.py  cache.py  discount_prompt.py  discount_rule.py  file.py  installment.py  item.py  item_price_tier.py  provider_item.py  provider_item_batches.py  quote.py  quote_item.py  request.py  segment.py  segment_contact.py  utils.py
ai_rfq_engine/models/batch_loaders/: __init__.py  base.py  discount_prompt_by_scope_loaders.py  discount_rule_by_item_loader.py  files_by_request_loader.py  installment_list_loader.py  item_loader.py  item_price_tier_by_item_loader.py  item_price_tier_by_provider_item_loader.py  provider_item_batch_list_loader.py  provider_item_batch_loader.py  provider_item_loader.py  (+9 more)
ai_rfq_engine/mutations/: discount_prompt.py  discount_rule.py  file.py  installment.py  item.py  item_price_tier.py  provider_item.py  provider_item_batches.py  quote.py  quote_item.py  request.py  segment.py  segment_contact.py
ai_rfq_engine/queries/: discount_prompt.py  discount_rule.py  file.py  installment.py  item.py  item_price_tier.py  provider_item.py  provider_item_batches.py  quote.py  quote_item.py  request.py  segment.py  segment_contact.py
ai_rfq_engine/tests/: README_TEST_DATA.md  ai_rfq_engine.graphql  conftest.py  load_sample_data.py  pytest.ini  test_ai_rfq_engine.py  test_batch_loaders.py  test_cache_management.py  test_helpers.py  test_nested_resolvers.py
ai_rfq_engine/types/: discount_prompt.py  discount_rule.py  file.py  installment.py  item.py  item_price_tier.py  provider_item.py  provider_item_batches.py  quote.py  quote_item.py  request.py  segment.py  segment_contact.py
ai_rfq_engine/utils/: normalization.py
docs/: DEVELOPMENT_PLAN.md  PRICING_CALCULATION.md
docs/migration/: NESTED_RESOLVER_DEVELOPMENT_PLAN.md  README.md
